[package]
name = "unprolix"
version = "0.1.0"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
edition = "2018"
description = "Boilerplate generator for constructors, getters and setters with derive macros"
readme = "README.md"
repository = "https://github.com/vlopes11/unprolix/"
license = "MIT"
keywords = ["macro-helpers", "constructors", "getters", "setters", "boilerplate"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[badges]
travis-ci = { repository = "vlopes11/unprolix", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[lib]
proc-macro = true
